# penguin_nurse

./: .gitignore  AGENTS.md  Cargo.toml  README.md  barcode.js  diesel.toml  flake.nix  input.css  npm-deps-hash  osv-scanner.toml  package-lock.json  package.json  renovate.json  rollup.config.mjs  tailwind.config.js  update.sh
.github/workflows/: ci.yml  osv-scanner.yml  update-flack-lock.yml  update_hashes.yml
.helix/: languages.toml
assets/: README.md  tailwind.css
docs/: LINT.md
migrations/2024-12-23-060947_sessions/: down.sql  up.sql
migrations/2024-12-24-010809_users/: down.sql  up.sql
migrations/2024-12-28-235829_basic_data/: down.sql  up.sql
migrations/2025-01-03-210513_poo_quantity/: down.sql  up.sql
migrations/2025-01-05-220048_manage_updated_at/: down.sql  up.sql
migrations/2025-01-05-220800_consumables/: down.sql  up.sql
migrations/2025-01-29-051005_add_utc_offsets/: down.sql  up.sql
migrations/2025-04-10-223039_consumption_type/: down.sql  up.sql
migrations/2025-08-28-054325_more_tables/: down.sql  up.sql
migrations/2025-09-09-214257_add_symptom_fields/: down.sql  up.sql
migrations/2025-09-17-212253_symptoms/: down.sql  up.sql
migrations/2025-09-27-212725_symptoms_thirst/: down.sql  up.sql
migrations/2025-11-22-234927-0000_waist_and_dental/: down.sql  up.sql
migrations/2026-03-14-212546-0000_optional_colour_fields/: down.sql  up.sql
migrations/2026-03-15-030227-0000_convert_float_to_numeric/: down.sql  up.sql
migrations/2026-03-15-213052-0000_add_consumption_type_to_consumables/: down.sql  up.sql
nix/: dioxus-cli.nix  module.nix
src/: dt.rs  lib.rs  main.rs  models.rs  validation.rs
src/components/: buttons.rs  consumables.rs  consumptions.rs  echo.rs  events.rs  exercises.rs  health_metrics.rs  mod.rs  navbar.rs  notes.rs  poos.rs  refluxs.rs  symptoms.rs  timeline.rs  users.rs  wee_urges.rs  wees.rs
src/forms/: barcodes.rs  buttons.rs  colours.rs  dialog.rs  errors.rs  fields.rs  forms.rs  mod.rs  validation.rs  values.rs
src/functions/: common.rs  consumables.rs  consumptions.rs  exercises.rs  health_metrics.rs  mod.rs  notes.rs  poos.rs  refluxs.rs  symptoms.rs  users.rs  wee_urges.rs  wees.rs
src/models/: common.rs  consumables.rs  consumption_consumables.rs  consumptions.rs  entry.rs  exercises.rs  health_metrics.rs  mod.rs  nested_consumables.rs  notes.rs  poos.rs  refluxs.rs  symptoms.rs  timeline.rs  users.rs  wee_urges.rs  wees.rs
src/server/: auth.rs  context.rs  database.rs  handlers.rs  mod.rs  session_store.rs
src/server/database/: connection.rs  models.rs  schema.rs
src/server/database/models/: consumables.rs  consumption_consumables.rs  consumptions.rs  exercises.rs  health_metrics.rs  mod.rs  nested_consumables.rs  notes.rs  poos.rs  refluxs.rs  session.rs  symptoms.rs  users.rs  wee_urges.rs  wees.rs
src/server/oidc/: claims.rs  middleware.rs  mod.rs
src/views/: auth.rs  consumables.rs  consumptions.rs  home.rs  mod.rs  poos.rs  timeline.rs  users.rs  wees.rs
