[package]
name = "penguin_nurse"
version = "0.1.0"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
chrono = { version = "0.4.39", features = ["serde"] }
tracing = { version = "0.1.41" }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json"], optional = true }
axum = { version = "0.7.9", optional = true }
diesel-async = { version = "0.5.2", features = ["async-connection-wrapper", "mobc", "postgres"], optional = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"], optional = true }
diesel_migrations = { version = "2.2.0", features = ["postgres"], optional = true }
dioxus-cli-config = { version = "*", optional = true }
tokio = { version = "1.42.0", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
tower-sessions = { version = "0.13.0", optional = true }
thiserror = "2.0.9"
async-trait = "0.1.83"
mobc = { version = "0.8.5", optional = true }
tap = "1.0.1"
serde = "1.0.216"
serde_json = "1.0.134"
base64 = "0.22.1"
time = "0.3.37"
tower-sessions-core = { version = "0.13.0", features = ["deletion-task"] }
getrandom = { version = "0.2.15", features = ["js"] }
axum-login = { version = "0.16.0", optional = true }
password-auth = { version = "1.0.0", optional = true }
palette = { version = "0.7.6", features = ["serde", "serializing"] }
# oidc = { version = "0.3.0", optional = true }
openid = { version = "0.15.0", optional = true, features = ["rustls"], default-features = false }
arc-swap = { version = "1.7.1", optional = true }
url = { version = "2.5.4", optional = true }
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dioxus-cli-config", "tokio", "axum", "diesel", "diesel-async", "diesel-derive-enum", "diesel_migrations", "tracing-subscriber", "tokio", "tower-sessions", "mobc", "axum-login", "password-auth", "openid", "arc-swap", "url"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dev-dependencies]
