[package]
name = "penguin_nurse"
version = "0.1.0"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
chrono = { version = "0.4.42", features = ["serde"] }
tracing = { version = "0.1.41" }
diesel = { version = "2.2.12", features = ["postgres", "chrono", "serde_json", "numeric", "64-column-tables"], optional = true }
axum = { version = "0.8.6", optional = true }
diesel-async = { version = "0.7.0", features = ["async-connection-wrapper", "mobc", "postgres"], optional = true }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"], optional = true }
diesel_migrations = { version = "2.2.0", features = ["postgres"], optional = true }
dioxus-cli-config = { version = "*", optional = true }
tokio = { version = "1.48.0", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
tower-sessions = { version = "0.14.0", optional = true }
thiserror = "2.0.17"
async-trait = "0.1.89"
mobc = { version = "0.9.0", optional = true }
tap = "1.0.1"
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.145"
base64 = "0.22.1"
time = "0.3.44"
#tower-sessions-core = { git = "https://github.com/maxcountryman/tower-sessions", features = ["deletion-task"], optional = true }
tower-sessions-core = { version = "0.14.0", features = ["deletion-task"], optional = true }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
axum-login = { version = "0.18.0", optional = true }
password-auth = { version = "1.0.0", optional = true }
palette = { version = "0.7.6", features = ["serde", "serializing"] }
openid = { version = "0.18.3", optional = true, features = ["rustls"], default-features = false }
arc-swap = { version = "1.7.1", optional = true }
url = { version = "2.5.7", optional = true }
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
classes = "1.0.0"
# rust_decimal = { version = "1.37.2", features = ["serde"] }
bigdecimal = { version = "0.4.9", features = ["serde"] }
pulldown-cmark = "0.13.0"
itertools = "0.14.0"
derive-enum-all-values = "0.2.1"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dioxus-cli-config", "tokio", "axum", "diesel", "diesel-async", "diesel-derive-enum", "diesel_migrations", "tracing-subscriber", "tokio", "tower-sessions", "tower-sessions-core", "mobc", "axum-login", "password-auth", "openid", "arc-swap", "url"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dev-dependencies]
